--- a/index.html
+++ b/index.html
@@ -3,13 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Web Studio</title>
   </head>
   <body>
     <!-- Header section -->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo">WebStudio</a>
         <ul>
           <li><a href="#studio">Studio</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
@@ -32,7 +50,7 @@
         <button type="button">Order Service</button>
       </section>
       <!-- Features section -->
-      <section>
+      <section class="features">
         <h2>Why Choose Us</h2>
         <ul>
           <li>
@@ -65,9 +83,8 @@
           </li>
         </ul>
       </section>
-
       <!-- Team section -->
-      <section>
+      <section class="team">
         <h2>Our Team</h2>
         <ul>
           <li>
@@ -112,11 +129,76 @@
           </li>
         </ul>
       </section>
+      <section class="portfolio">
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/portfolio-img-6.jpg"
+              alt="Image of Banking App"
+              width="360"
+              height="300"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio-img-5.jpg"
+              alt="Image of Cashless Payment"
+              width="360"
+              height="300"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio-img-4.jpg"
+              alt="Image of Meditation App"
+              width="360"
+              height="300"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio-img-3.jpg"
+              alt="Image of Taxi Service"
+              width="360"
+              height="300"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio-img-2.jpg"
+              alt="Image of Screen Illustrations"
+              width="360"
+              height="300"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio-img-1.jpg"
+              alt="Image of Online Courses"
+              width="360"
+              height="300"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <!-- Footer section -->
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html" class="logo">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
