--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <!-- Header section -->
     <header>
       <nav>
-        <a href="./index.html" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo">Web<span>Studio</span></a>
         <ul>
-          <li><a href="#studio">Studio</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contacts">Contacts</a></li>
+          <li><a href="./index.html">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -46,12 +46,12 @@
     <main>
       <!-- Hero section -->
       <section class="hero">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-btn">Order Service</button>
       </section>
       <!-- Features section -->
       <section class="features">
-        <h2>Why Choose Us</h2>
+        <h2 class="features-title">Why Choose Us</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -85,7 +85,7 @@
       </section>
       <!-- Team section -->
       <section class="team">
-        <h2>Our Team</h2>
+        <h2 class="team-title">Our Team</h2>
         <ul>
           <li>
             <img
@@ -130,7 +130,7 @@
         </ul>
       </section>
       <section class="portfolio">
-        <h2>Our Portfolio</h2>
+        <h2 class="portfolio-title">Our Portfolio</h2>
         <ul>
           <li>
             <img
@@ -197,8 +197,8 @@
     </main>
 
     <!-- Footer section -->
-    <footer>
-      <a href="./index.html" class="logo">WebStudio</a>
+    <footer class="footer">
+      <a href="./index.html" class="logo">Web<span>Studio</span></a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
