--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </section>
       <!-- Features section -->
       <section class="features">
-        <h2 class="features-title visually-hidden">Why Choose Us</h2>
+        <h2 class="features-title">Why Choose Us</h2>
         <ul class="features-list">
           <li class="features-item">
             <h3 class="features-subtitle">Strategy</h3>
