--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
     <!-- Footer section -->
     <footer class="footer">
-      <a href="./index.html" class="logo logo--footer">Web<span>Studio</span></a>
+      <a href="./index.html" class="logo logo--footer">Web<span>studio</span></a>
       <p class="footer-description">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
