--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Header section -->
     <header class="header">
       <nav class="nav">
-        <a href="./index.html" class="logo logo--header">Web<span>Studio</span></a>
+        <a href="./index.html" class="logo logo--header">Web<span class="span-logo">Studio</span></a>
         <ul class="nav-list">
           <li class="nav-item"><a href="./index.html" class="nav-link">Studio</a></li>
           <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
@@ -213,7 +213,7 @@
 
     <!-- Footer section -->
     <footer class="footer">
-      <a href="./index.html" class="logo logo--footer">Web<span>studio</span></a>
+      <a href="./index.html" class="logo logo--footer">Web<span class="span-logo">Studio</span></a>
       <p class="footer-description">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
