--- a/index.html
+++ b/index.html
@@ -26,198 +26,238 @@
   <body class="page">
     <!-- Header section -->
     <header class="header">
-      <nav class="nav">
-        <a href="./index.html" class="logo logo--header">Web<span class="span-logo">Studio</span></a>
-        <ul class="nav-list">
-          <li class="nav-item"><a href="./index.html" class="nav-link">Studio</a></li>
-          <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
-          <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="contact">
-        <ul class="contact-list">
-          <li class="contact-item">
-            <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
-          </li>
-          <li class="contact-item">
-            <a href="tel:+110001111111" class="contact-link">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav class="nav">
+          <a href="./index.html" class="logo logo--header"
+            >Web<span class="span-logo">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="./index.html" class="nav-link">Studio</a>
+            </li>
+            <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="contact">
+          <ul class="contact-list">
+            <li class="contact-item">
+              <a href="mailto:info@devstudio.com" class="contact-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contact-item">
+              <a href="tel:+110001111111" class="contact-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
-
     <!-- Main content -->
     <main class="main">
       <!-- Hero section -->
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="hero-button">Order Service</button>
+        </div>
       </section>
       <!-- Features section -->
       <section class="features">
-        <h2 class="features-title">Why Choose Us</h2>
-        <ul class="features-list">
-          <li class="features-item">
-            <h3 class="features-subtitle">Strategy</h3>
-            <p class="features-description">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-subtitle">Punctuality</h3>
-            <p class="features-description">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-subtitle">Diligence</h3>
-            <p class="features-description">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-subtitle">Technologies</h3>
-            <p class="features-description">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="features-title" hidden>Why Choose Us</h2>
+          <ul class="features-list">
+            <li class="features-item">
+              <h3 class="features-subtitle">Strategy</h3>
+              <p class="features-description">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-subtitle">Punctuality</h3>
+              <p class="features-description">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-subtitle">Diligence</h3>
+              <p class="features-description">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-subtitle">Technologies</h3>
+              <p class="features-description">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Team section -->
       <section class="team">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              src="./images/img-3.jpg"
-              alt="Photo of Mark Guerrero - Product Designer"
-              width="264"
-              height="260"
-              class="team-image"
-            />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-role">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/img-2.jpg"
-              alt="Photo of Tom Ford - Frontend Developer"
-              width="264"
-              height="260"
-              class="team-image"
-            />
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-role">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/img-1.jpg"
-              alt="Photo of Camila Garcia - Marketing"
-              width="264"
-              height="260"
-              class="team-image"
-            />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-role">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/img.jpg"
-              alt="Photo of Daniel Wilson - UI Designer"
-              width="264"
-              height="260"
-              class="team-image"
-            />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-role">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                src="./images/img-3.jpg"
+                alt="Photo of Mark Guerrero - Product Designer"
+                width="264"
+                height="260"
+                class="team-image"
+              />
+              <div class="team-item-content">
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-role">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img-2.jpg"
+                alt="Photo of Tom Ford - Frontend Developer"
+                width="264"
+                height="260"
+                class="team-image"
+              />
+              <div class="team-item-content">
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-role">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img-1.jpg"
+                alt="Photo of Camila Garcia - Marketing"
+                width="264"
+                height="260"
+                class="team-image"
+              />
+              <div class="team-item-content">
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-role">Marketing</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img.jpg"
+                alt="Photo of Daniel Wilson - UI Designer"
+                width="264"
+                height="260"
+                class="team-image"
+              />
+              <div class="team-item-content">
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-role">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Portfolio section -->
       <section class="portfolio">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-item">
-            <img
-              src="./images/portfolio-img-6.jpg"
-              alt="Image of Banking App"
-              width="360"
-              height="300"
-              class="portfolio-image"
-            />
-            <h3 class="portfolio-name">Banking App</h3>
-            <p class="portfolio-category">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/portfolio-img-5.jpg"
-              alt="Image of Cashless Payment"
-              width="360"
-              height="300"
-              class="portfolio-image"
-            />
-            <h3 class="portfolio-name">Cashless Payment</h3>
-            <p class="portfolio-category">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/portfolio-img-4.jpg"
-              alt="Image of Meditation App"
-              width="360"
-              height="300"
-              class="portfolio-image"
-            />
-            <h3 class="portfolio-name">Meditation App</h3>
-            <p class="portfolio-category">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/portfolio-img-3.jpg"
-              alt="Image of Taxi Service"
-              width="360"
-              height="300"
-              class="portfolio-image"
-            />
-            <h3 class="portfolio-name">Taxi Service</h3>
-            <p class="portfolio-category">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/portfolio-img-2.jpg"
-              alt="Image of Screen Illustrations"
-              width="360"
-              height="300"
-              class="portfolio-image"
-            />
-            <h3 class="portfolio-name">Screen Illustrations</h3>
-            <p class="portfolio-category">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/portfolio-img-1.jpg"
-              alt="Image of Online Courses"
-              width="360"
-              height="300"
-              class="portfolio-image"
-            />
-            <h3 class="portfolio-name">Online Courses</h3>
-            <p class="portfolio-category">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolio-img-6.jpg"
+                alt="Image of Banking App"
+                width="360"
+                height="300"
+                class="portfolio-image"
+              />
+              <div class="portfolio-item-content">
+                <h3 class="portfolio-name">Banking App</h3>
+                <p class="portfolio-category">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolio-img-5.jpg"
+                alt="Image of Cashless Payment"
+                width="360"
+                height="300"
+                class="portfolio-image"
+              />
+              <div class="portfolio-item-content">
+                <h3 class="portfolio-name">Cashless Payment</h3>
+                <p class="portfolio-category">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolio-img-4.jpg"
+                alt="Image of Meditation App"
+                width="360"
+                height="300"
+                class="portfolio-image"
+              />
+              <div class="portfolio-item-content">
+                <h3 class="portfolio-name">Meditation App</h3>
+                <p class="portfolio-category">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolio-img-3.jpg"
+                alt="Image of Taxi Service"
+                width="360"
+                height="300"
+                class="portfolio-image"
+              />
+              <div class="portfolio-item-content">
+                <h3 class="portfolio-name">Taxi Service</h3>
+                <p class="portfolio-category">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolio-img-2.jpg"
+                alt="Image of Screen Illustrations"
+                width="360"
+                height="300"
+                class="portfolio-image"
+              />
+              <div class="portfolio-item-content">
+                <h3 class="portfolio-name">Screen Illustrations</h3>
+                <p class="portfolio-category">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolio-img-1.jpg"
+                alt="Image of Online Courses"
+                width="360"
+                height="300"
+                class="portfolio-image"
+              />
+              <div class="portfolio-item-content">
+                <h3 class="portfolio-name">Online Courses</h3>
+                <p class="portfolio-category">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
-
     <!-- Footer section -->
     <footer class="footer">
-      <a href="./index.html" class="logo logo--footer">Web<span class="span-logo">Studio</span></a>
-      <p class="footer-description">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="logo logo--footer"
+          >Web<span class="span-logo">Studio</span></a
+        >
+        <p class="footer-description">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
