--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <!-- Features section -->
       <section class="features">
         <div class="container">
-          <h2 class="visually-hidden">Why Choose Us</h2>
+          <h2 class="visually-hidden features-title">Why Choose Us</h2>
           <ul class="features-list">
             <li class="features-item">
               <h3 class="features-subtitle">Strategy</h3>
