--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>Web Studio</title>
   </head>
   <body class="page">
-    <!-- Header section -->
+    <!-- #region header -->
     <header class="header">
       <div class="container">
         <nav class="nav">
@@ -55,16 +55,18 @@
         </address>
       </div>
     </header>
-    <!-- Main content -->
+    <!-- #endregion header-->
     <main class="main">
-      <!-- Hero section -->
+      <!-- #region hero -->
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-button">Order Service</button>
         </div>
       </section>
-      <!-- Features section -->
+      <!-- #endregion hero-->
+
+      <!-- #region features -->
       <section class="features">
         <div class="container">
           <h2 class="visually-hidden features-title">Why Choose Us</h2>
@@ -100,7 +102,9 @@
           </ul>
         </div>
       </section>
-      <!-- Team section -->
+      <!-- #endregion features-->
+
+      <!-- #region team -->
       <section class="team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
@@ -160,7 +164,9 @@
           </ul>
         </div>
       </section>
-      <!-- Portfolio section -->
+      <!-- #endregion team-->
+
+      <!-- #region portfolio -->
       <section class="portfolio">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
@@ -173,6 +179,11 @@
                 height="300"
                 class="portfolio-image"
               />
+              <div class="portfolio-subtitle overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-name">Banking App</h3>
                 <p class="portfolio-category">App</p>
@@ -186,6 +197,11 @@
                 height="300"
                 class="portfolio-image"
               />
+              <div class="portfolio-subtitle overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-name">Cashless Payment</h3>
                 <p class="portfolio-category">Marketing</p>
@@ -199,6 +215,11 @@
                 height="300"
                 class="portfolio-image"
               />
+              <div class="portfolio-subtitle overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-name">Meditation App</h3>
                 <p class="portfolio-category">App</p>
@@ -212,6 +233,11 @@
                 height="300"
                 class="portfolio-image"
               />
+              <div class="portfolio-subtitle overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-name">Taxi Service</h3>
                 <p class="portfolio-category">Marketing</p>
@@ -225,6 +251,11 @@
                 height="300"
                 class="portfolio-image"
               />
+              <div class="portfolio-subtitle overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-name">Screen Illustrations</h3>
                 <p class="portfolio-category">Design</p>
@@ -238,6 +269,11 @@
                 height="300"
                 class="portfolio-image"
               />
+              <div class="portfolio-subtitle overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-name">Online Courses</h3>
                 <p class="portfolio-category">Marketing</p>
@@ -246,8 +282,9 @@
           </ul>
         </div>
       </section>
+      <!-- #endregion portfolio-->
     </main>
-    <!-- Footer section -->
+    <!-- #region footer -->
     <footer class="footer">
       <div class="container">
         <a href="./index.html" class="logo logo--footer"
@@ -257,7 +294,11 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+        <div class="socials">
+          <p class="footer-title">Social media</p>
+        </div>
       </div>
     </footer>
+    <!-- #endregion footer-->
   </body>
 </html>
