--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           >
           <ul class="nav-list">
             <li class="nav-item">
-              <a href="./index.html" class="nav-link">Studio</a>
+              <a href="./index.html" class="nav-link current">Studio</a>
             </li>
             <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
             <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
