Rename subscribe label class for consistency and clarity

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
           <p class="footer-form-title">Subscribe</p>
           <div class="footer-form-wrap">
             <form class="footer-form-group">
-              <label class="subscribe label">
+              <label class="subscribe-label">
                 <input
                   class="subscribe-input"
                   type="email"
