--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
     </footer>
     <!-- #endregion footer-->
     <!-- #region modal -->
-    <div class="modal-overlay is-open">
+    <div class="modal-overlay">
       <div class="modal">
         <button title="send" type="button" class="close-btn">
           <svg class="close-icon" width="8" height="8">
