--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
             <label for="user-privacy" class="checkbox-label">
               <span class="checkbox-custom">
                 <svg class="checkbox-icon" width="10" height="8">
-                  <use href="./images/icons.svg#icon-checkbox"></use>
+                  <use href="./images/icons.svg#icon-checkmark"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
